--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "gatsby": "^4.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
