--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miranda-luo-s-personal-website",
+  "name": "personal-website",
   "version": "1.0.0",
   "private": true,
   "description": "Miranda Luo's Personal Website",
@@ -12,7 +12,10 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|css|md)\""
   },
   "dependencies": {
     "@types/react": "^17.0.37",
@@ -20,5 +23,22 @@
     "gatsby": "^4.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.3",
+    "prettier": "^2.5.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run lint && yarn run format"
+    }
+  },
+  "lint-staged": {
+    "*.+(js|jsx|ts|tsx)": "eslint --fix",
+    "*.+(js|jsx|ts|tsx|json|css|md)": "prettier --write"
   }
 }
