--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -13,9 +13,31 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: static/resume.tex
+          root_file: /static/main.tex
       - name: Uploading artifact
         uses: actions/upload-artifact@v2
         with:
           name: PDF
-          path: static/resume.pdf
+          path: /static/main.pdf
+      - name: Get Time
+        id: time
+        uses: nanzm/get-time-action@v1.1
+        with:
+          timeZone: -7
+          format: 'YYYY-MM-DD-HH-mm-ss'
+      - name: Create Release
+        id: create_release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: Resume compiled on ${{ steps.time.outputs.time }}
+          tag_name: ${{ steps.time.outputs.time }}
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: /static/main.pdf
+          asset_name:  /static/resume-${{ steps.time.outputs.time }}.pdf
+          asset_content_type: application/pdf
