--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -13,12 +13,14 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: ${{github.workspace}}/static/main.tex
+          root_file: main.tex
+          working_directory: static
+          extra_fonts: ./fonts/*.ttf
       - name: Uploading artifact
         uses: actions/upload-artifact@v2
         with:
           name: PDF
-          path: ${{github.workspace}}/static/main.pdf
+          path: static/main.pdf
       - name: Get Time
         id: time
         uses: nanzm/get-time-action@v1.1
@@ -38,6 +40,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{github.workspace}}/static/main.pdf
-          asset_name:  ${{github.workspace}}/static/resume-${{ steps.time.outputs.time }}.pdf
+          asset_path: static/main.pdf
+          asset_name:  static/resume-${{ steps.time.outputs.time }}.pdf
           asset_content_type: application/pdf
