--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^5.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   },
   "husky": {
     "hooks": {
