--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
     "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|css|md)\""
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.61",
+    "@mui/material": "^5.2.5",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
