--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
+    "@mui/types": "^7.1.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "gatsby": "^4.4.0",
@@ -32,6 +34,9 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@types/react-helmet": "^6.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
@@ -39,6 +44,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
+    "prop-types": "^15.8.0",
     "typescript": "^4.5.4"
   },
   "husky": {
