--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "module": "commonjs",
     "target": "es6",
     "jsx": "preserve",
-    "lib": ["dom", "es2015", "es2017"],
+    "lib": ["es6", "dom"],
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true,
     "strict": true,
     "noEmit": true,
     "isolatedModules": true,
@@ -14,7 +17,5 @@
     "removeComments": false
   },
   "include": ["./src/**/*"],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
