--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@mui/types": "^7.1.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/smooth-scroll": "^16.1.1",
     "gatsby": "^4.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "@emotion/cache": "^11.7.1",
