--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
@@ -30,6 +32,7 @@
     "@types/smooth-scroll": "^16.1.1",
     "gatsby": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
+    "gatsby-plugin-mdx": "^3.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-sharp": "^4.4.0",
     "gatsby-source-filesystem": "^4.4.0",
