--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@types/react-dom": "^17.0.11",
     "@types/smooth-scroll": "^16.1.1",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-graphql-codegen": "^3.1.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-mdx": "^3.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-sharp": "^4.4.0",
     "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
