--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
     "@mui/types": "^7.1.0",
+    "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/smooth-scroll": "^16.1.1",
