--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clean": "gatsby clean",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|css|md)\""
+    "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|css|md)\"",
+    "deploy": "gatsby build && gh-pages -r git@github.com:mluo24/mluo24.github.io.git -d public -b main"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -52,6 +53,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
