--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
+      - name: Install dependencies
+        run: yarn install
+      
       # step deploys with the deploy command
       - name: Deploy with gh-pages
         run: |
