--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|css|md)\"",
-    "deploy": "gh-pages -r git@github.com:mluo24/mluo24.github.io.git -d public -b main"
+    "deploy": "gatsby build && gh-pages -r git@github.com:mluo24/mluo24.github.io.git -d public -b main"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
