--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|css|md)\"",
-    "deploy": "gatsby build && node deploy.js"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://$GH_TOKEN@github.com/mluo24/mluo24.github.io.git"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
