--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "format": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|css|md)\"",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://$GH_TOKEN@github.com/mluo24/mluo24.github.io.git"
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public -r https://${GITHUB_TOKEN}@github.com/mluo24/mluo24.github.io.git"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -52,7 +52,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "gh-pages": "^4.0.0",
+    "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "prettier": "^2.5.1",
