new deploy actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,16 +13,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        
-      # add private keys
-      - uses: webfactory/ssh-agent@v0.5.4
+
+      - uses: borales/actions-yarn@v3.0.0
         with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          cmd: install # will run `yarn install` command
+
+      - name: Build Gatsby
+        run: gatsby build
       
-      # step deploys with the deploy command
-      - name: Deploy with gh-pages
-        run: | 
-          git remote set-url origin https://${GITHUB_TOKEN}@github.com/mluo24/mluo24.github.io.git
-          yarn install && yarn run deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          external_repository: mluo24/mluo24.github.io
+          publish_branch: main 
+          publish_dir: ./public
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
