--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: borales/actions-yarn@v3.0.0
-        with:
-          cmd: install # will run `yarn install` command
-
       - name: Build Gatsby
-        run: gatsby build
+        run: yarn install && gatsby build
       
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
