--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/smooth-scroll": "^16.1.1",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-google-gtag": "^4.18.0",
     "gatsby-plugin-graphql-codegen": "^3.1.0",
     "gatsby-plugin-image": "^2.5.1",
     "gatsby-plugin-mdx": "^3.4.0",
