--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.5",
+    "@mui/system": "^5.8.7",
     "@mui/types": "^7.1.0",
     "@types/mdx-js__react": "^1.5.5",
     "@types/react": "^17.0.37",
@@ -59,6 +60,10 @@
     "prettier": "^2.5.1",
     "prop-types": "^15.8.0",
     "typescript": "^4.5.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.11"
   },
   "husky": {
     "hooks": {
