Installed Mantine and updated 404 page to use it

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
+    "@mantine/core": "^4.2.12",
+    "@mantine/hooks": "^4.2.12",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.2.5",
@@ -37,6 +39,7 @@
     "gatsby-plugin-google-gtag": "^4.18.0",
     "gatsby-plugin-graphql-codegen": "^3.1.0",
     "gatsby-plugin-image": "^2.5.1",
+    "gatsby-plugin-mantine": "^4.0.0",
     "gatsby-plugin-mdx": "^3.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-sharp": "^4.5.1",
