--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "tabler-icons-react": "^1.53.0"
   },
   "devDependencies": {
     "@emotion/cache": "^11.7.1",
